--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,14 @@
 [package]
-name = "bitfield"
+name = "rust-bitfield"
 version = "0.1.0"
 authors = ["Varphone Wong <varphone@qq.com>"]
-edition = "2018"
+description = """
+This crate provides macros to generate bitfield-like struct.
+"""
+repository = "https://github.com/varphone/rust-bitfield"
+documentation = "https://docs.rs/rust-bitfield"
 license = "MIT"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-paste = "0.1"
